# LEAF

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  pingLocal.txt
Examples/: basic-oscillators.c  basic-oscillators.h
LEAF/: .gitignore  leaf.h
LEAF/Inc/: MIDI_application.h  audiostream.h  bdma.h  bsp_driver_sd.h  codec.h  custom_fonts.h  eeprom.h  fatfs_platform.h  ffconf.h  gfx.h  i2c.h  leaf-808.h  leaf-WDF.h  leaf-analysis.h  leaf-crusher.h  leaf-delay.h  leaf-distortion.h  leaf-dynamics.h  leaf-effects.h  leaf-electrical.h  leaf-envelopes.h  leaf-filter.h  leaf-filters.h  leaf-formant.h  leaf-global.h  leaf-globals.h  leaf-instruments.h  leaf-math.h  leaf-mempool.h  leaf-midi.h  leaf-oscillator.h  leaf-oscillators.h  leaf-oversampler.h  leaf-physical.h  leaf-pitch.h  leaf-reverb.h  leaf-sample.h  leaf-sampling.h  leaf-string.h  leaf-tables.h  (+20 more)
LEAF/Inc_cpp/: leaf-808.hpp  leaf-delay.hpp  leaf-filter.hpp  leaf-formant.hpp  leaf-globals.hpp  leaf-math.hpp  leaf-mempool.hpp  leaf-oscillator.hpp  leaf-pitch.hpp  leaf-reverb.hpp  leaf-string.hpp  leaf-vocoder.hpp  leaf-wavefolder.hpp  leaf-wavetables.hpp
LEAF/Src/: MIDI_application.c  adc.c  audiostream.c  bdma.c  bsp_driver_sd.c  codec.c  dma.c  eeprom.c  fatfs_platform.c  fmc.c  gfx.c  gfx_font.c  gpio.c  i2c.c  leaf-808.c  leaf-WDF.c  leaf-analysis.c  leaf-crusher.c  leaf-delay.c  leaf-distortion.c  leaf-dynamics.c  leaf-effects.c  leaf-electrical.c  leaf-envelopes.c  leaf-filter.c  leaf-filters.c  leaf-formant.c  leaf-instruments.c  leaf-math.c  leaf-mempool.c  leaf-midi.c  leaf-oscillator.c  leaf-oscillators.c  leaf-oversampler.c  leaf-physical.c  leaf-pitch.c  leaf-reverb.c  leaf-sample.c  leaf-sampling.c  leaf-string.c  (+22 more)
LEAF/Src_cpp/: leaf-808.cpp  leaf-delay.cpp  leaf-filter.cpp  leaf-formant.cpp  leaf-math.cpp  leaf-midi.cpp  leaf-reverb.cpp  leaf-string.cpp  leaf-vocoder.cpp  leaf-wavefolder.cpp  leaf-wavetables.cpp
LEAF_JUCEPlugin/: LEAF.jucer
LEAF_JUCEPlugin/JuceLibraryCode/: AppConfig.h  JuceHeader.h
LEAF_JUCEPlugin/Source/: LEAFLink.cpp  LEAFLink.h  LEAFTest.h  MyTest.cpp  MyTest.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UIComponent.cpp  UIComponent.h  Yin.cpp
TestPlugin/: LEAF.jucer
TestPlugin/Source/: Globals.h  LEAFLink.cpp  LEAFLink.h  LEAFTest.h  MyTest.cpp  PluginProcessor.cpp  PluginProcessor.h  UIComponent.cpp  UIComponent.h  Yin.h
cmake/: AddCatch2.cmake
docs/: footer.html
docs/leaf/: annotated.html  dir_127e6aa213d41105176fe0c3bbb2560c.html  dir_c32436ea5eb8693473f37766c9d9ff95.html  functions_vars.html  globals_defs.html  group__analysis.html  group__distortion.html  group__oscillators.html  group__physical.html  group__reverb.html  group__sampling.html  group__t808hihat.html  group__t808kick.html  group__tadsr.html  group__tadsr4.html  group__tasdr2.html  group__tautosampler.html  group__tautotune.html  group__tbutterworth.html  group__tcompressor.html  group__tcycle.html  group__tdelay.html  group__tdiodefilter.html  group__tdualpitchdetector.html  group__tefficientsvf.html  group__tenvelope.html  group__tenvpd.html  group__tfeedbackleveler.html  group__tfir.html  group__tkarplusstrong.html  group__tmbpulse.html  group__tneuron.html  group__tnreverb.html  group__tonezero.html  group__toversampler.html  group__tphasor.html  group__tpoly.html  group__trampupdown.html  group__trosenbergglottalpulse.html  group__tsampler.html  (+21 more)
docs/leaf/search/: all_2.js  all_4.js  all_6.js  all_7.js  all_a.js  all_d.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  groups_0.js  groups_2.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js  variables_8.js
doxygen/: customdoxygen.css  footer.html  header.html
doxygen/leaf/: annotated.html  basic-oscillators_8c-example.html  classes.html  customdoxygen.css  d__fft__mayer_8h_source.html  dir_127e6aa213d41105176fe0c3bbb2560c.html  dir_2638202b9749e6ce2c919e410b7e2f43.html  dir_76a7f9c0effa62c8115652ccf2f83bfd.html  dir_c32436ea5eb8693473f37766c9d9ff95.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  group__analysis.html  group__delay.html  group__distortion.html  group__dynamics.html  group__effects.html  group__electrical.html  group__envelopes.html  group__filters.html  group__instruments.html  group__leaf.html  group__math.html  group__mempool.html  group__midi.html  group__oscillators.html  group__physical.html  group__reverb.html  group__sampling.html  group__t808cowbell.html  group__t808hihat.html  group__t808kick.html  group__t808snare.html  group__t_m_b_sampler.html  group__tables.html  group__tadsr.html  group__tadsr3.html  (+116 more)
doxygen/leaf/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  enumvalues_0.js  enumvalues_2.js  functions_1.js  groups_1.js  groups_3.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  groups_b.js  variables_2.js  variables_3.js  (+3 more)
leaf/: .gitignore  CMakeLists.txt  Makefile  leaf-config.h  leaf-envelopes.h  leaf.cpp  leaf.h  leaf_polyvalues.h
leaf/Inc/: leaf-analysis.h  leaf-delay.h  leaf-distortion.h  leaf-dynamics.h  leaf-effects.h  leaf-electrical.h  leaf-envelopes.h  leaf-filters.h  leaf-global.h  leaf-instruments.h  leaf-math.h  leaf-mempool.h  leaf-midi copy.h  leaf-midi.h  leaf-oscillators.h  leaf-physical.h  leaf-reverb.h  leaf-sampling.h  leaf-tables.h  leaf-vocal.h
leaf/Src/: leaf-analysis.c  leaf-delay.c  leaf-distortion.c  leaf-dynamics.c  leaf-effects.c  leaf-electrical.c  leaf-envelopes.c  leaf-filters.c  leaf-instruments.c  leaf-math.c  leaf-mempool.c  leaf-midi.c  leaf-oscillators.c  leaf-physical.c  leaf-reverb.c  leaf-sampling.c  leaf-tables.c  leaf-vocal.c  leaf.c
leaf/test/: CMakeLists.txt  another_test.cpp  filters_test.cpp  oscillators_test.cpp  other_test.cpp  test.cpp
test/: another_test.cpp  filters_test.cpp  oscillators_test.cpp  test.cpp
wtgenerator/: wtgenerator.py
